--- a/CheatSheet-List_Arrary_DF.ipynb
+++ b/CheatSheet-List_Arrary_DF.ipynb
@@ -5331,6 +5331,602 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merge Dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1 col2\n",
+      "0     1    A\n",
+      "1     2    B\n",
+      "  col2  col3\n",
+      "0    A    40\n",
+      "1    B    30\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.DataFrame([\n",
+    "                    [1, \"A\"], [2,\"B\"]\n",
+    "                    ], columns = [\"col1\", \"col2\"])\n",
+    "print(df1)\n",
+    "\n",
+    "\n",
+    "df2 = pd.DataFrame([\n",
+    "                    [\"A\", 40], [\"B\", 30]\n",
+    "                    ], columns = [\"col2\", \"col3\"])\n",
+    "print(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1 col2  col3\n",
+      "0     1    A    40\n",
+      "1     2    B    30\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_m = pd.merge(df1, df2, on=\"col2\", how=\"inner\")\n",
+    "print (df_m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sort DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>B</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1 col2  col3\n",
+       "1     2    B    30\n",
+       "0     1    A    40"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_m.sort_values(by=\"col3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Concatenating DataFrames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1 col2\n",
+      "0     1    A\n",
+      "1     2    B\n",
+      "  col3  col4\n",
+      "0    A    40\n",
+      "1    B    30\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.DataFrame([[1, \"A\"], \n",
+    "                    [2,\"B\"]\n",
+    "                    ], columns = [\"col1\", \"col2\"])\n",
+    "print(df1)\n",
+    "\n",
+    "\n",
+    "df2 = pd.DataFrame([[\"A\", 40], \n",
+    "                    [\"B\", 30]\n",
+    "                    ], columns = [\"col3\", \"col4\"])\n",
+    "print(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1 col2 col3  col4\n",
+      "0     1    A    A    40\n",
+      "1     2    B    B    30\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_c = pd.concat((df1, df2), axis=1)\n",
+    "print (df_c)\n",
+    "\n",
+    "#axis = 1 stacks columns together.\n",
+    "#axis = 0 stacks rows together, provided column header match."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rename columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c_1</th>\n",
+       "      <th>c_2</th>\n",
+       "      <th>c_3</th>\n",
+       "      <th>c_4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   c_1 c_2 c_3  c_4\n",
+       "0    1   A   A   40\n",
+       "1    2   B   B   30"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_c = df_c.rename(columns={\n",
+    "                \"col1\":\"c_1\",\n",
+    "                \"col2\":\"c_2\",\n",
+    "                \"col3\":\"c_3\",\n",
+    "                \"col4\":\"c_4\"\n",
+    "            })\n",
+    "df_c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add a new column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c_1</th>\n",
+       "      <th>c_2</th>\n",
+       "      <th>c_3</th>\n",
+       "      <th>c_4</th>\n",
+       "      <th>c_new</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>40</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "      <td>30</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   c_1 c_2 c_3  c_4  c_new\n",
+       "0    1   A   A   40     50\n",
+       "1    2   B   B   30     40"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_c[\"c_new\"] = df_c[\"c_4\"] + 10\n",
+    "df_c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Group By"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "col2\n",
+       "A    8\n",
+       "B    7\n",
+       "Name: col1, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1 = pd.DataFrame([[1, \"A\"],\n",
+    "                     [2, \"A\"],\n",
+    "                     [3, \"B\"],\n",
+    "                     [4, \"B\"],\n",
+    "                     [5, \"A\"]], columns = [\"col1\", \"col2\"])\n",
+    "\n",
+    "df_1.groupby(\"col2\").col1.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply function on a column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1 col2\n",
+      "0     1    A\n",
+      "1     2    A\n",
+      "2     3    B\n",
+      "3     4    B\n",
+      "4     5    A\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1 col2  col3\n",
+      "0     1    A     2\n",
+      "1     2    A     4\n",
+      "2     3    B     6\n",
+      "3     4    B     8\n",
+      "4     5    A    10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def foo(number):\n",
+    "    return number * 2\n",
+    "\n",
+    "df_1[\"col3\"] = df_1.col1.apply(foo)\n",
+    "\n",
+    "print(df_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove Duplicates rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1 col2\n",
+      "0     1    A\n",
+      "1     2    A\n",
+      "2     3    B\n",
+      "3     3    B\n",
+      "4     2    A\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_1 = pd.DataFrame([[1, \"A\"],\n",
+    "                     [2, \"A\"],\n",
+    "                     [3, \"B\"],\n",
+    "                     [3, \"B\"],\n",
+    "                     [2, \"A\"]], columns = [\"col1\", \"col2\"])\n",
+    "\n",
+    "print(df_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1 col2\n",
+       "0     1    A\n",
+       "1     2    A\n",
+       "2     3    B"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count - find the frequency of each value in each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    3\n",
+       "B    2\n",
+       "Name: col2, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1.col2.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 2)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
